--- a/about.html
+++ b/about.html
@@ -50,8 +50,6 @@
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="about.html">About</a></li>
 				<li><a href="charts.html">Charts</a></li>
-				<li><a href="dj.html">DJ’s</a></li>
-				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
@@ -90,7 +88,7 @@
 				<div class="col-lg-6">
 					<div class="ab-content">
 						<h4>A short History</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tincidunt ligula. Fusce dictum ullamcorper purus, at elementum sem sollicitudin non. Sed id tristique lacus. Fusce pellentesque dignissim arcu, id hendrerit urna feugiat vitae. Pellentesque viverra aliquet arcu, vel aliquet est commodo quis. Nam tempus, nisl eu maximus viverra, magna quam porta nibh.</p>
+						<p>Antarctic Studios was founded in early 2020, with the vision to help new and upcoming artists create polished sounding, radio-ready music at an affordable price. </p>
 					</div>
 				</div>
 			</div>
@@ -101,7 +99,7 @@
 				<div class="col-lg-6 ab-pull">
 					<div class="ab-content">
 						<h4>Where?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu tincidunt ligula. Fusce dictum ullamcorper purus, at elementum sem sollicit udin non. Sed id tristique lacus. Fusce pellentesque dignissim arcu, id hendrerit urna feugiat vitae. Pellentesque viverra aliquet arcu,  aliquet est commodo quis. Nam tempus, nisl eu maximus viverra, magna quam porta nibh.</p>
+						<p>Currently located in Kitchener, Ontario, Antarctic Studios is still relatively new, and as such, the studio is still being built. Due to this and the current pandemic, we are not open for in-person studio work, but are open for virtual collaboration work. Once the studio is finished being constructed and COVID-19 numbers are lower, the studio will be open for in-person recording sessions.</p>
 					</div>
 				</div>
 			</div>
