--- a/charts.html
+++ b/charts.html
@@ -47,11 +47,9 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li><a href="home.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li class="active"><a href="charts.html">Charts</a></li>
-				<li><a href="dj.html">DJ’s</a></li>
-				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
