--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<ul class="main-menu">
 				<li class="active"><a href="home.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="charts.html">Charts</a></li>
+				<li><a href="charts.html">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
@@ -69,7 +69,7 @@
 			<div class="hs-item">
 				<div class="container">
 					<h3>Antarctic Studios</h3>
-					<h2>A comprehensive Canadian audio roduction studio capable of all your mixing, mastering, compositional and recording needs.</h2>
+					<h2>A comprehensive Canadian audio production studio capable of all your mixing, mastering, compositional and recording needs.</h2>
 				</div>
 			</div>
 		</div>
