--- a/contact.html
+++ b/contact.html
@@ -49,17 +49,14 @@
 			<ul class="main-menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="charts.html">Charts</a></li>
+				<li><a href="charts.html">Portfolio</a></li>
 				<li class="active"><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
-				<a href=""><i class="fa fa-twitter"></i></a>
-				<a href=""><i class="fa fa-soundcloud"></i></a>
-				<a href=""><i class="fa fa-instagram"></i></a>
-				<a href=""><i class="fa fa-google-plus"></i></a>
-				<a href=""><i class="fa fa-facebook"></i></a>
-				<a href=""><i class="fa fa-youtube-play"></i></a>
+				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
+				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
+				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
 			</div>
 		</div>
 	</header>
@@ -80,20 +77,11 @@
 	<!-- contact section -->
 	<section class="contact-section">
 		<div class="container">
-			<div class="location-links">
-				<a href="">Berlin</a>
-				<a href="">Bucharest</a>
-				<a href="">London</a>
-				<a href="">Budapest</a>
-				<a href="">Tel Aviv</a>
-				<a href="">Moscow</a>
-			</div>
+			
 			<div class="contact-info">
-				<p><span>A:</span> Aleea Croitorilor nr. 691, bl. D, Bucuresti, CP 072496</p>
-				<p><span>T:</span> 0780 243 570</p>
-				<p><span>E:</span> office@88point8.com</p>
+				<p><span>A:</span> Kitchener, Ontario, Canada</p>
+				<p><span>E:</span> alex@skywatch.com</p>
 			</div>
-			<div class="map" id="map-canvas"></div>
 			<div class="section-title text-center">
 				<h2>Get in Touch</h2>	
 			</div>
@@ -122,71 +110,80 @@
 
 
 
-	<!-- Footer Top section -->
-	<section class="footer-top-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-6 ft-widget">
-					<div class="ft-title">
-						<h4>Locations</h4>
+		<!-- Footer Top section -->
+		<section class="footer-top-section">
+			<div class="container">
+				<div class="row">
+	
+					<!--
+					<div class="col-lg-3 col-md-6 ft-widget">
+						<div class="ft-title">
+							<h4>Locations</h4>
+						</div>
+						<ul>
+							<li><a href="">Berlin</a></li>
+							<li><a href="">Bucharest</a></li>
+							<li><a href="">London</a></li>
+							<li><a href="">Budapest</a></li>
+							<li><a href="">Tel Aviv</a></li>
+							<li><a href="">Moscow</a></li>
+						</ul>
 					</div>
-					<ul>
-						<li><a href="">Berlin</a></li>
-						<li><a href="">Bucharest</a></li>
-						<li><a href="">London</a></li>
-						<li><a href="">Budapest</a></li>
-						<li><a href="">Tel Aviv</a></li>
-						<li><a href="">Moscow</a></li>
-					</ul>
-				</div>
-				<div class="col-lg-3 col-md-6 ft-widget">
-					<div class="ft-title">
-						<h4>Top Shows</h4>
+					<div class="col-lg-3 col-md-6 ft-widget">
+						<div class="ft-title">
+							<h4>Top Shows</h4>
+						</div>
+						<ul class="order-list">
+							<li><a href=""><span>1</span>88,8 Weekly Chart</a></li>
+							<li><a href=""><span>2</span>Transitions - John Digweed</a></li>
+							<li><a href=""><span>3</span>Who’s On Top? with John Doe</a></li>
+							<li><a href=""><span>4</span>88,8 News</a></li>
+							<li><a href=""><span>5</span>Electronic Worriors</a></li>
+						</ul>
 					</div>
-					<ul class="order-list">
-						<li><a href=""><span>1</span>88,8 Weekly Chart</a></li>
-						<li><a href=""><span>2</span>Transitions - John Digweed</a></li>
-						<li><a href=""><span>3</span>Who’s On Top? with John Doe</a></li>
-						<li><a href=""><span>4</span>88,8 News</a></li>
-						<li><a href=""><span>5</span>Electronic Worriors</a></li>
-					</ul>
-				</div>
-				<div class="col-lg-3 col-md-6 ft-widget">
-					<div class="ft-title">
-						<h4>Blog</h4>
-					</div>
-					<div class="ft-blog-widget">
-						<div class="bw-item">
-							<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/1.jpg"></div>
-							<div class="bw-content">
-								<p>5 Things to know when you attend a music festival. </p>
-								<a href="#">Continue Reading</a>
+					<div class="col-lg-3 col-md-6 ft-widget">
+						<div class="ft-title">
+							<h4>Blog</h4>
+						</div>
+						<div class="ft-blog-widget">
+							<div class="bw-item">
+								<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/1.jpg"></div>
+								<div class="bw-content">
+									<p>5 Things to know when you attend a music festival. </p>
+									<a href="#">Continue Reading</a>
+								</div>
+							</div>
+							<div class="bw-item">
+								<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/2.jpg"></div>
+								<div class="bw-content">
+									<p>5 Things to know when you attend a music festival. </p>
+									<a href="#">Continue Reading</a>
+								</div>
 							</div>
 						</div>
-						<div class="bw-item">
-							<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/2.jpg"></div>
-							<div class="bw-content">
-								<p>5 Things to know when you attend a music festival. </p>
-								<a href="#">Continue Reading</a>
-							</div>
+					</div>
+					-->
+					<div class="col-lg-3 col-md-6 ft-widget">
+						<div class="ft-title">
+							<h4>Contact</h4>
+						</div>
+						<div class="ft-contact-widget">
+							<p><span>A:</span> Kitchener, Ontario</p>
+							<p><span>E:</span> alex@antarcticstudios.ca</p>
+							<img src="img/logo.png" class="footer-logo" alt="">
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 ft-widget">
-					<div class="ft-title">
-						<h4>Contact</h4>
-					</div>
-					<div class="ft-contact-widget">
-						<p><span>A:</span> 4111 Birch Street, Berlin</p>
-						<p><span>T:</span> 317-822-4383</p>
-						<p><span>E:</span> office@88point8.com</p>
-						<img src="img/logo.png" class="footer-logo" alt="">
+					<div class="col-lg-3 col-md-6 ft-widget">
+						
+						<div>
+							
+							<img src="img/logo_fullres.png" >
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<!-- Footer Top section end -->
+		</section>
+		<!-- Footer Top section end -->
 
 
 	<!-- Footer section -->
