--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>88.0 - Radio Station Template</title>
+	<title>About - Antarctic Studios</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="88.0 radio station template">
 	<meta name="keywords" content="radio, station, creative, html">
