Update to meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<title>Antarctic Studios</title>
 	<meta charset="UTF-8">
+    <meta property="og:title" content="Antarctic Studios">
 	<meta name="description" content="Antarctic Studios">
+    <meta property="og:description" content="A comprehensive Canadian audio production studio capable of all your mixing, mastering, compositional and recording needs.">
 	<meta name="keywords" content="studio, recording, mixing, mastering, antarctic studios">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="img/logo_fullres.png">
 	<!-- Favicon -->   
 	<link href="img/favicon.ico" rel="shortcut icon"/>
 
