Add og image tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
     <meta property="og:title" content="Antarctic Studios">
 	<meta name="description" content="Antarctic Studios">
+    <meta name="og:image" content="img/logo_fullres.png">
     <meta property="og:description" content="A comprehensive Canadian audio production studio capable of all your mixing, mastering, compositional and recording needs.">
 	<meta name="keywords" content="studio, recording, mixing, mastering, antarctic studios">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
