--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<header class="header-section">
 		<div class="header-warp">
 			<!-- Site Logo -->
-			<a href="home.html" class="site-logo">
+			<a href="index.html" class="site-logo">
 				<img src="img/logo.png" alt="">
 			</a>
 			<!-- responsive -->
