--- a/contact.html
+++ b/contact.html
@@ -85,21 +85,21 @@
 			<div class="section-title text-center">
 				<h2>Get in Touch</h2>	
 			</div>
-			<form class="contact-form">
+			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
 				<div class="row">
 					<div class="col-lg-4">
-						<input type="text" placeholder="Your Name">
+						<input type="text" placeholder="Your Name" name="name">
 					</div>
 					<div class="col-lg-4">
-						<input type="text" placeholder="Your E-mail">
+						<input type="text" placeholder="Your E-mail" name="_replyto">
 					</div>
 					<div class="col-lg-4">
-						<input type="text" placeholder="Subject">
+						<input type="text" placeholder="Subject" name="subject">
 					</div>
 					<div class="col-lg-12">
 						<textarea placeholder="Message"></textarea>
 						<div class="text-center">
-							<button class="site-btn">SEND IT!</button>
+							<button class="site-btn" value="Send">SEND IT!</button>
 						</div>
 					</div>	
 				</div>
