--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 			
 			<div class="contact-info">
 				<p><span>A:</span> Kitchener, Ontario, Canada</p>
-				<p><span>E:</span> alex@skywatch.com</p>
+				<p><span>E:</span> alex@antarcticstudios.ca</p>
 			</div>
 			<div class="section-title text-center">
 				<h2>Get in Touch</h2>	
