--- a/charts.html
+++ b/charts.html
@@ -84,17 +84,20 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<a href="https://open.spotify.com/album/3afdJkJ4lxnVKJtx0qysdV?si=tQLI-gDmTdW9XaGrF-Ts_A"><img src="img/categories/1.jpg" alt=""></a>
+                        <h4><a href="https://open.spotify.com/album/3afdJkJ4lxnVKJtx0qysdV"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/vibe-city-ep/1524344123"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_njQmhDWQIB8ppzJ2TxUYv1kN-HilR4S00"><i class="fa fa-youtube"></i></a></h4>
 					
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<img src="img/categories/2.jpg" alt="">
+                        <h4><a href="https://open.spotify.com/album/5kg2zpxYJvzwKnVuWM4wQV"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/me/album/time-worth-wasting-ep/1531972637"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_n4tLUajLfqJGq4RXlngus5-H5uxrwPZrI"><i class="fa fa-youtube"></i></a></h4>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<img src="img/categories/3.jpg" alt="">
+                        <h4><a href="https://open.spotify.com/album/2Dpu4OijDVw7up4fCJV4lo"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/ca/album/no-justice-no-peace-burn-it-down-single/1519956995"><i class="fa fa-apple"></i></a> <a href="https://youtu.be/RzGMjPstcQk"><i class="fa fa-youtube"></i></a></h4>
 					</div>
 				</div>
 
