Addition of synth sketches release

--- a/charts.html
+++ b/charts.html
@@ -101,6 +101,12 @@
                         <h4><FONT color="#ffffff"><a href="https://open.spotify.com/album/2Dpu4OijDVw7up4fCJV4lo"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/ca/album/no-justice-no-peace-burn-it-down-single/1519956995"><i class="fa fa-apple"></i></a> <a href="https://youtu.be/RzGMjPstcQk"><i class="fa fa-youtube"></i></a></FONT></h4>
 					</div>
 				</div>
+                <div class="col-md-3 col-sm-6">
+					<div class="categorie">
+						<img src="img/categories/5.jpg" alt="">
+                        <h4><FONT color="#ffffff"><a href="https://open.spotify.com/album/3XWmdKe81QqySclPeEaMUu"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/synth-sketches-volume-1-single/1539246059"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_k_zsv3_Pw8lzr1BxVdN4qJNBQEoI3tOyk"><i class="fa fa-youtube"></i></a></FONT></h4>
+					</div>
+				</div>
 
 				
 				<div class="col-md-3 col-sm-6">
@@ -109,6 +115,7 @@
 						<h4><FONT><a href="https://soundcloud.com/user-99352525/the-tragedy-of-mariam/s-FYcBTVWfVd3"><i class="fa fa-soundcloud"></i></a></FONT></h4>
 					</div>
 				</div>
+                
 				<!--
 				<div class="col-md-3 col-sm-6">
 					<div class="categorie">
