Update to include rates, update theme and contact links

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>About - Antarctic Studios</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="88.0 radio station template">
+	<meta name="description" content="Antarctic Studios - About page">
 	<meta name="keywords" content="radio, station, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -20,6 +20,20 @@
 	<link rel="stylesheet" href="css/owl.carousel.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
+	
+	<style>
+	.column {
+  float: left;
+  width: 25%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+	</style>
 
 
 	<!--[if lt IE 9]>
@@ -51,12 +65,14 @@
 			<ul class="main-menu">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="about.html">About</a></li>
-				<li><a href="charts.html">Portfolio</a></li>
+				<li ><a href="portfolio.html">Portfolio</a></li>
+				<li ><a href="rates.html">Rates</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
 				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
+				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
 				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
 				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
 			</div>
@@ -98,7 +114,7 @@
 				<div class="col-lg-6 ab-pull">
 					<div class="ab-content">
 						<h4>Where?</h4>
-						<p>Currently located in Kitchener, Ontario, Antarctic Studios is still relatively new, and as such, the studio is still being built. Due to this and the current pandemic, we are not open for in-person studio work, but are open for virtual collaboration work. Once the studio is finished being constructed and COVID-19 numbers are lower, the studio will be open for in-person recording sessions.</p>
+						<p>Currently located in Kitchener, Ontario, Antarctic Studios is still relatively new, and as such, the studio is still being built. Due to this and the current pandemic, we are not open for in-person studio work, but are open for virtual collaboration work. Rates are available on our <a href="rates.html">session rates page </a>.</p>
 					</div>
 				</div>
 			</div>
@@ -112,8 +128,8 @@
 		<div class="container">
 			<div class="vp-content">
 				<div class="section-title text-center">
-					<h2>Charts</h2>
-					<p>Although only recently started, Antarctic Studios has a few pieces of music available online, with more on the way. Have a listen to our portfolio in our <a href="charts.html">Portfolio section</a>.</p>
+					<h2>Portfolio</h2>
+					<p>Although only recently started, Antarctic Studios has a few pieces of music available online, with more on the way. Have a listen to our portfolio in our <a href="portfolio.html">Portfolio section</a>.</p>
 					
 				</div>
 			</div>
@@ -208,9 +224,10 @@
 						<h4>Contact</h4>
 					</div>
 					<div class="ft-contact-widget">
-						<p><span>A:</span> Kitchener, Ontario</p>
-						<p><span>E:</span> alex@antarcticstudios.ca</p>
-						<img src="img/logo.png" class="footer-logo" alt="">
+						<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> </i> @antarcticstudios</a></p>
+							<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
+							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
+							<img src="img/logo.png" class="footer-logo" alt="">
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 ft-widget">
