--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li class="active"><a href="home.html">Home</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="charts.html">Portfolio</a></li>
+				<li ><a href="portfolio.html">Portfolio</a></li>
+				<li ><a href="rates.html">Rates</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
 				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
+				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
 				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
 				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
 			</div>
