--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="charts.html">Portfolio</a></li>
+				<li><a href="rates.html">Rates</a></li>
 				<li class="active"><a href="contact.html">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
