Fix header links to have fb logo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<!-- Social Links -->
 			<div class="header-social-links">
 				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
-				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
+				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i></a>
 				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
 				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
 			</div>
