--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 			<div class="contact-info">
 				<p>Kitchener, Ontario, Canada</p>
 				<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> @antarcticstudios </i></a></p>
-				<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-instagram"></i> @antarcticstudios </a></p>
+				<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
 				<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
 				
 			</div>
