Addition of vol2

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<a href="https://open.spotify.com/album/3afdJkJ4lxnVKJtx0qysdV?si=tQLI-gDmTdW9XaGrF-Ts_A"><img src="img/categories/1.jpg" alt=""></a>
-                        <h4><FONT color="#ffffff"><a href="https://open.spotify.com/album/3afdJkJ4lxnVKJtx0qysdV"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/vibe-city-ep/1524344123"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_njQmhDWQIB8ppzJ2TxUYv1kN-HilR4S00"><i class="fa fa-youtube"></i></a></FONT></h4>
+                        <h4><FONT color="#ffffff"><a href="https://mcvittie.bandcamp.com/album/vibe-city"><i class="fa fa-bandcamp"></i></a> <a href="https://open.spotify.com/album/3afdJkJ4lxnVKJtx0qysdV"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/vibe-city-ep/1524344123"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_njQmhDWQIB8ppzJ2TxUYv1kN-HilR4S00"><i class="fa fa-youtube"></i></a></FONT></h4>
 					
 					</div>
 				</div>
@@ -106,7 +106,13 @@
                 <div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<img src="img/categories/5.jpg" alt="">
-                        <h4><FONT color="#ffffff"><a href="https://open.spotify.com/album/3XWmdKe81QqySclPeEaMUu"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/synth-sketches-volume-1-single/1539246059"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_k_zsv3_Pw8lzr1BxVdN4qJNBQEoI3tOyk"><i class="fa fa-youtube"></i></a></FONT></h4>
+                        <h4><FONT color="#ffffff"><a href="https://mcvittie.bandcamp.com/album/synth-sketches-volume-1"><i class="fa fa-bandcamp"></i></a> <a href="https://open.spotify.com/album/3XWmdKe81QqySclPeEaMUu"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/synth-sketches-volume-1-single/1539246059"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_k_zsv3_Pw8lzr1BxVdN4qJNBQEoI3tOyk"><i class="fa fa-youtube"></i></a></FONT></h4>
+					</div>
+				</div>
+                <div class="col-md-3 col-sm-6">
+					<div class="categorie">
+						<img src="img/categories/7.jpg" alt="">
+                        <h4><FONT color="#ffffff"><a href="https://mcvittie.bandcamp.com/album/synth-sketches-volume-2"><i class="fa fa-bandcamp"></i></a> <a href="https://open.spotify.com/album/3lqLBUyG12KeZJ07phWgAB?si=3lD5YfdFStqtafDci47F-A"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/synth-sketches-volume-2-ep/1546961639"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_k5uuDpWDAvQqfJp7NwHPbVYH-py2HTv6w"><i class="fa fa-youtube"></i></a></FONT></h4>
 					</div>
 				</div>
 
