Make links cleaner

--- a/charts.html
+++ b/charts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta http-equiv = "refresh" content = "0; url = portfolio.html" />
+      <meta http-equiv = "refresh" content = "0; url = portfolio" />
    </head><!-- Redirect page to preserve compatibility with people's bookmarks and search engine results. -->
    <body>
       
