--- a/contact/index.html
+++ b/contact/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-	<title>Studio rates - Antarctic Studios</title>
+	<title>Contact us - Antarctic Studios</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="88.0 radio station template">
+	<meta name="description" content="Antarctic Studios - Contact information page">
 	<meta name="keywords" content="radio, station, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -50,8 +50,8 @@
 				<li><a href="">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li><a href="charts">Portfolio</a></li>
-				<li class="active"><a href="rates">Rates</a></li>
-				<li><a href="contact">Contact</a></li>
+				<li><a href="rates">Rates</a></li>
+				<li class="active"><a href="contact">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
@@ -69,7 +69,7 @@
 	<section class="page-info-section set-bg" data-setbg="img/page-info-bg.jpg">
 		<div class="container">
 			<div class="section-title text-center">
-				<h2>Session rates</h2>	
+				<h2>Contact</h2>	
 			</div>
 		</div>
 	</section>
@@ -79,20 +79,16 @@
 	<!-- contact section -->
 	<section class="contact-section">
 		<div class="container">
-			<h3>Mixing</h3>
-			<p>Mixing only is <b>$50</b> per song, or <b>$200</b> for five songs.<br><i>$50 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
-			<br>
-			<h3>Mix and master bundle</h3>
-			<p>We will mix and master your music so that it will sound its best on the distribution platforms of your choice.
-			<br>The mix and master bundle is <b>$80</b> to mix and master each song, or <b>$350</b> for five songs. <br><br><i>$80 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
-			<br>
-			<h3>Production and session musician work</h3>
-			<p>Need more instruments added to your song? We will be happy to add just about any instrument!<br>Prices range from <b>$20</b> to <b>$100</b> per instrument added, with the price reflecting the complexity and length of the part needed. </p>
-			<br>
-			<h3>Book studio time</h3>
-			<p>Due to the current pandemic, studio time booking at Antarctic Studios is not available. COVID won't last forever though, and we're super excited to offer affordable rates for session time when it is possible to do so.</p>
+			
+			<div class="contact-info">
+				<p>Kitchener, Ontario, Canada</p>
+				<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> @antarcticstudios </i></a></p>
+				<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
+				<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
+				
+			</div>
 			<div class="section-title text-center">
-				<h2>Book something</h2>	
+				<h2>Get in Touch</h2>	
 			</div>
 			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
 				<div class="row">
