--- a/about/index.html
+++ b/about/index.html
@@ -63,11 +63,11 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="about.html">About</a></li>
-				<li ><a href="portfolio.html">Portfolio</a></li>
-				<li ><a href="rates.html">Rates</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="">Home</a></li>
+				<li class="active"><a href="about">About</a></li>
+				<li ><a href="portfolio">Portfolio</a></li>
+				<li ><a href="rates">Rates</a></li>
+				<li><a href="contact">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
