--- a/rates.html
+++ b/rates.html
@@ -1,227 +1,1 @@
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-	<title>Studio rates - Antarctic Studios</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="88.0 radio station template">
-	<meta name="keywords" content="radio, station, creative, html">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
-
-	<!-- Google Font -->   
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/jquery-ui.min.css"/>
-	<link rel="stylesheet" href="css/flaticon.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
-
-
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-	<!-- Page Preloder -->
-	<!-- <div id="preloder">
-		<div class="loader"></div>
-	</div> -->
-	
-	<!-- Header section -->
-	<header class="header-section">
-		<div class="header-warp">
-			<!-- Site Logo -->
-			<a href="index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
-			</a>
-			<!-- responsive -->
-			<div class="nav-switch">
-				<i class="fa fa-bars"></i>
-			</div>
-			<!-- Main Menu -->
-			<ul class="main-menu">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="charts.html">Portfolio</a></li>
-				<li class="active"><a href="rates.html">Rates</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-			<!-- Social Links -->
-			<div class="header-social-links">
-				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
-				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i></a>
-				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
-				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
-			</div>
-		</div>
-	</header>
-	<!-- Header section end -->
-
-
-	<!--  section -->
-	<section class="page-info-section set-bg" data-setbg="img/page-info-bg.jpg">
-		<div class="container">
-			<div class="section-title text-center">
-				<h2>Session rates</h2>	
-			</div>
-		</div>
-	</section>
-	<!--  section end -->
-	
-
-	<!-- contact section -->
-	<section class="contact-section">
-		<div class="container">
-			<h3>Mixing</h3>
-			<p>Mixing only is <b>$50</b> per song, or <b>$200</b> for five songs.<br><i>$50 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
-			<br>
-			<h3>Mix and master bundle</h3>
-			<p>We will mix and master your music so that it will sound its best on the distribution platforms of your choice.
-			<br>The mix and master bundle is <b>$80</b> to mix and master each song, or <b>$350</b> for five songs. <br><br><i>$80 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
-			<br>
-			<h3>Production and session musician work</h3>
-			<p>Need more instruments added to your song? We will be happy to add just about any instrument!<br>Prices range from <b>$20</b> to <b>$100</b> per instrument added, with the price reflecting the complexity and length of the part needed. </p>
-			<br>
-			<h3>Book studio time</h3>
-			<p>Due to the current pandemic, studio time booking at Antarctic Studios is not available. COVID won't last forever though, and we're super excited to offer affordable rates for session time when it is possible to do so.</p>
-			<div class="section-title text-center">
-				<h2>Book something</h2>	
-			</div>
-			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
-				<div class="row">
-					<div class="col-lg-4">
-						<input type="text" placeholder="Your Name" name="name">
-					</div>
-					<div class="col-lg-4">
-						<input type="text" placeholder="Your E-mail" name="_replyto">
-					</div>
-					<div class="col-lg-4">
-						<input type="text" placeholder="Subject" name="subject">
-					</div>
-					<div class="col-lg-12">
-						<textarea placeholder="Message"></textarea>
-						<div class="text-center">
-							<button class="site-btn" value="Send">SEND IT!</button>
-						</div>
-					</div>	
-				</div>
-			</form>
-		</div>
-	</section>
-	<!--  contact section end -->
-
-
-
-		<!-- Footer Top section -->
-		<section class="footer-top-section">
-			<div class="container">
-				<div class="row">
-	
-					<!--
-					<div class="col-lg-3 col-md-6 ft-widget">
-						<div class="ft-title">
-							<h4>Locations</h4>
-						</div>
-						<ul>
-							<li><a href="">Berlin</a></li>
-							<li><a href="">Bucharest</a></li>
-							<li><a href="">London</a></li>
-							<li><a href="">Budapest</a></li>
-							<li><a href="">Tel Aviv</a></li>
-							<li><a href="">Moscow</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-3 col-md-6 ft-widget">
-						<div class="ft-title">
-							<h4>Top Shows</h4>
-						</div>
-						<ul class="order-list">
-							<li><a href=""><span>1</span>88,8 Weekly Chart</a></li>
-							<li><a href=""><span>2</span>Transitions - John Digweed</a></li>
-							<li><a href=""><span>3</span>Who’s On Top? with John Doe</a></li>
-							<li><a href=""><span>4</span>88,8 News</a></li>
-							<li><a href=""><span>5</span>Electronic Worriors</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-3 col-md-6 ft-widget">
-						<div class="ft-title">
-							<h4>Blog</h4>
-						</div>
-						<div class="ft-blog-widget">
-							<div class="bw-item">
-								<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/1.jpg"></div>
-								<div class="bw-content">
-									<p>5 Things to know when you attend a music festival. </p>
-									<a href="#">Continue Reading</a>
-								</div>
-							</div>
-							<div class="bw-item">
-								<div class="bw-thumb set-bg" data-setbg="img/blog/thumb/2.jpg"></div>
-								<div class="bw-content">
-									<p>5 Things to know when you attend a music festival. </p>
-									<a href="#">Continue Reading</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					-->
-					<div class="col-lg-3 col-md-6 ft-widget">
-						<div class="ft-title">
-							<h4>Contact</h4>
-						</div>
-						<div class="ft-contact-widget">
-							<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> </i> @antarcticstudios</a></p>
-							<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
-							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
-							<img src="img/logo.png" class="footer-logo" alt="">
-						</div>
-					</div>
-					<div class="col-lg-3 col-md-6 ft-widget">
-						
-						<div>
-							
-							<img src="img/logo_fullres.png" >
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- Footer Top section end -->
-
-
-	<!-- Footer section -->
-	<footer class="footer-section">
-		<div class="contaoner">
-			<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-		</div>
-	</footer>
-	<!-- Footer section end -->
-
-
-
-
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/jquery-ui.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/circle-progress.min.js"></script>
-	<script src="js/main.js"></script>
-
-
-	<!-- load for map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YyDTa0qqOjIerob2VTIwo_XVMhrruxo"></script>
-	<script src="js/map.js"></script>
-
-    </body>
-</html>
+rates/index.html
