--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li><a href="">Home</a></li>
+				<li><a href="..">Home</a></li>
 				<li class="active"><a href="about">About</a></li>
 				<li ><a href="portfolio">Portfolio</a></li>
 				<li ><a href="rates">Rates</a></li>
