--- a/contact/index.html
+++ b/contact/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li><a href="">Home</a></li>
+				<li><a href="..">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li><a href="charts">Portfolio</a></li>
 				<li><a href="rates">Rates</a></li>
