--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li class="active"><a href="/">Home</a></li>
+				<li class="active"><a href=".">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li ><a href="portfolio">Portfolio</a></li>
 				<li ><a href="rates">Rates</a></li>
