Addition of psalms for portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -88,11 +88,18 @@
 		<div class="container">
 			<div class="row">
             <div class="col-md-3 col-sm-6">
+					<div class="categorie" id="eatockpsalm">
+						<img src="img/albumart/EatockPsalm23.jpg" alt="">
+                        <h4> <a href="https://www.youtube.com/watch?v=yPlI83sR2J4"><i class="fa fa-youtube"></i></a></FONT></h4>
+					</div>
+				</div>
+            <div class="col-md-3 col-sm-6">
 					<div class="categorie" id="sketchvol2">
 						<img src="img/albumart/sketchvol2.jpg" alt="">
                         <h4><FONT color="#ffffff"><a href="https://mcvittie.bandcamp.com/album/synth-sketches-volume-2"><i class="fa fa-bandcamp"></i></a> <a href="https://open.spotify.com/album/3lqLBUyG12KeZJ07phWgAB?si=3lD5YfdFStqtafDci47F-A"><i class="fa fa-spotify"></i></a> <a href="https://music.apple.com/us/album/synth-sketches-volume-2-ep/1546961639"><i class="fa fa-apple"></i></a> <a href="https://music.youtube.com/playlist?list=OLAK5uy_k5uuDpWDAvQqfJp7NwHPbVYH-py2HTv6w"><i class="fa fa-youtube"></i></a></FONT></h4>
 					</div>
 				</div>
+                
                 <div class="col-md-3 col-sm-6">
 					<div class="categorie">
 						<img src="img/albumart/sketchvol1.jpg" alt="">
