Update to remove all radio station template text

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -90,7 +90,7 @@
             <div class="col-md-3 col-sm-6">
 					<div class="categorie" id="eatockpsalm">
 						<img src="img/albumart/EatockPsalm23.jpg" alt="">
-                        <h3>Test</h3>
+                        <h2>Test2</h2><br>
                         <h4> <a href="https://www.youtube.com/watch?v=yPlI83sR2J4"><i class="fa fa-youtube"></i></a></FONT></h4>
 					</div>
 				</div>
