--- a/rates/index.html
+++ b/rates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Studio rates - Antarctic Studios</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="88.0 radio station template">
+	<meta name="description" content="Studio rates - Antarctic Studios">
 	<meta name="keywords" content="radio, station, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
