--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -87,11 +87,22 @@
 
 		<div class="container">
 			<div class="row">
+			<div class="col-md-3 col-sm-6">
+					<div class="categorie" id="sketchesvo3">
+						<img src="img/albumart/sketchesvol3.jpg" alt="">
+                        <h4><a href="https://open.spotify.com/album/2xoLBYAieH09Cde8GM3JEX?si=304tJ4J9TtmuRYDlmom0tA"><i class=" fa fa-spotify"></i></a><a href="https://music.apple.com/us/album/synth-sketches-volume-3-single/1565889308"><i class="fa fa-apple"></i></a><a href="https://music.youtube.com/playlist?list=OLAK5uy_kWXGWHd5QXDSlbMAqZ7BLHZBAE_Z75qW4"><i class="fa fa-youtube"></i></a></FONT></h4>
+					</div>
+				</div>
+			<div class="col-md-3 col-sm-6">
+					<div class="categorie" id="dialedup">
+						<img src="img/albumart/dialedup.jpg" alt="">
+                        <h4><a href="https://mcvittie.bandcamp.com/track/dialed-up"><i class=" fa fa-bandcamp"></i></a></FONT></h4>
+					</div>
+				</div>
             <div class="col-md-3 col-sm-6">
 					<div class="categorie" id="eatockpsalm">
 						<img src="img/albumart/EatockPsalm23.jpg" alt="">
-                        <h2>Test2</h2><br>
-                        <h4> <a href="https://www.youtube.com/watch?v=yPlI83sR2J4"><i class="fa fa-youtube"></i></a></FONT></h4>
+                        <h4><a href="https://www.youtube.com/watch?v=yPlI83sR2J4"><i class="fa fa-youtube"></i></a></FONT></h4>
 					</div>
 				</div>
             <div class="col-md-3 col-sm-6">
