update to rates

--- a/about/index.html
+++ b/about/index.html
@@ -129,7 +129,7 @@
 			<div class="vp-content">
 				<div class="section-title text-center">
 					<h2>Portfolio</h2>
-					<p>Although only recently started, Antarctic Studios has a few pieces of music available online, with more on the way. Have a listen to our portfolio in our <a href="portfolio.html">Portfolio section</a>.</p>
+					<p>Although only recently started, Antarctic Studios has a few pieces of music available online, with more on the way. Have a listen to our portfolio in our <a href="portfolio">Portfolio section</a>.</p>
 					
 				</div>
 			</div>
