--- a/rates/index.html
+++ b/rates/index.html
@@ -80,11 +80,15 @@
 	<section class="contact-section">
 		<div class="container">
 			<h3>Mixing</h3>
-			<p>Mixing only is <b>$50</b> per song, or <b>$200</b> for five songs.<br><i>$50 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
+			<p>Mixing only is <b>$70</b> per song, with <b>20%</b> off when having 5 or more tracks mixed.<br><i>$70 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
 			<br>
 			<h3>Mix and master bundle</h3>
 			<p>We will mix and master your music so that it will sound its best on the distribution platforms of your choice.
-			<br>The mix and master bundle is <b>$80</b> to mix and master each song, or <b>$350</b> for five songs. <br><br><i>$80 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
+			<br>The mix and master bundle is <b>$120</b> to mix and master each song, with <b>20%</b> off when having 5 or more tracks mixed. <br><br><i>$80 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes and 30 tracks per song. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
+			<br>
+			<h3>Mastering</h3>
+			<p>We do provide mastering-only services, but we prefer if we do both mixing and mastering at Antarctic Studios.
+			<br>Mastering is provided as a $70 per song service, with 20% off when having 5 or more tracks mastered.<br><i>$70 per song includes up to 10 revisions included in the price per song, as well as a limit of 5 minutes. Going over these limits we can discuss additional pricing on a per-song basis. </i></p>
 			<br>
 			<h3>Production and session musician work</h3>
 			<p>Need more instruments added to your song? We will be happy to add just about any instrument!<br>Prices range from <b>$20</b> to <b>$100</b> per instrument added, with the price reflecting the complexity and length of the part needed. </p>
