--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,7 +99,16 @@
                         <h4><a href="https://mcvittie.bandcamp.com/track/dialed-up"><i class=" fa fa-bandcamp"></i></a></FONT></h4>
 					</div>
 				</div>
-            <div class="col-md-3 col-sm-6">
+				
+				<div class="col-md-3 col-sm-6">
+					<div class="categorie" id="beyondtheblue">
+						<img src="img/albumart/beyondtheblue.jpg" alt="">
+                        <h4><a href="https://www.youtube.com/watch?v=Cc1cVcepO_I"><i class=" fa fa-youtube"></i></a></FONT></h4>
+					</div>
+				</div>
+            
+			
+			<div class="col-md-3 col-sm-6">
 					<div class="categorie" id="eatockpsalm">
 						<img src="img/albumart/EatockPsalm23.jpg" alt="">
                         <h4><a href="https://www.youtube.com/watch?v=yPlI83sR2J4"><i class="fa fa-youtube"></i></a></FONT></h4>
