Add linktree like page

--- a/about/index.html
+++ b/about/index.html
@@ -66,6 +66,7 @@
 				<li><a href="..">Home</a></li>
 				<li class="active"><a href="about">About</a></li>
 				<li ><a href="portfolio">Portfolio</a></li>
+				<li><a href="newmusic">New Releases</a></li>
 				<li ><a href="rates">Rates</a></li>
 				<li><a href="contact">Contact</a></li>
 			</ul>
