--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,6 +53,7 @@
 				<li><a href="..">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li class="active"><a href="portfolio">Portfolio</a></li>
+				<li><a href="newmusic">New Releases</a></li>
 				<li ><a href="rates">Rates</a></li>
 				<li><a href="contact">Contact</a></li>
 			</ul>
