--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 			</div>
 			<!-- Main Menu -->
 			<ul class="main-menu">
-				<li class="active"><a href=".">Home</a></li>
+				<li class="active"><a href="..">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li ><a href="portfolio">Portfolio</a></li>
+				<li ><a href="newmusic">New Releases</a></li>
 				<li ><a href="rates">Rates</a></li>
 				<li><a href="contact">Contact</a></li>
 			</ul>
