--- a/rates/index.html
+++ b/rates/index.html
@@ -50,6 +50,7 @@
 				<li><a href="..">Home</a></li>
 				<li><a href="about">About</a></li>
 				<li><a href="charts">Portfolio</a></li>
+				<li><a href="newmusic">New Releases</a></li>
 				<li class="active"><a href="rates">Rates</a></li>
 				<li><a href="contact">Contact</a></li>
 			</ul>
