--- a/newmusic/index.html
+++ b/newmusic/index.html
@@ -106,7 +106,7 @@
 	<section class="page-info-section set-bg" data-setbg="img/page-info-bg.jpg">
 		<div class="container">
 			<div class="section-title text-center">
-				<h2>Antarctic Studios Latest Releases</h2>	
+				<h2>Latest Releases</h2>	
 			</div>
 		</div>
 	</section>
