--- a/newmusic/index.html
+++ b/newmusic/index.html
@@ -117,7 +117,7 @@
 	<!--  About section -->
 	<section class="about-block-section">
 		<div class="instagram">
-		<a href="https://mcvittie.bandcamp.com/mcvittie/track/dialed-up">McVittie - Dialed Up - Bandcamp</a>
+		<a href="https://mcvittie.bandcamp.com/track/dialed-up">McVittie - Dialed Up - Bandcamp</a>
         <a href="https://open.spotify.com/track/0yQ1mbcuQ9zyHJqn61hDBW">McVittie - Dialed Up - Spotify</a>
         <a href="https://music.apple.com/us/album/dialed-up-single/1563844211">McVittie - Dialed Up - Apple Music</a>
 		<a href="https://music.amazon.ca/albums/B092YPTWNZ">McVittie - Dialed Up - Amazon Music</a>
