--- a/newmusic/index.html
+++ b/newmusic/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PGPTWMVZ53');
+</script>
 	<title>Antarctic Studios - New releases</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Antarctic Studios - New releases">
