--- a/contact/index.html
+++ b/contact/index.html
@@ -90,7 +90,7 @@
 				<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i> @antarcticstudios </a></p>
 				<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
 				<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
-				<p><i class="fa fa-phone"</i> +1 226 770 0265</p>
+				<p><i class="fa fa-phone"></i> +1 226 770 0265</p>
 				
 			</div>
 			<div class="section-title text-center">
@@ -182,7 +182,7 @@
 							<p><a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"> </i> @antarcticstudios</a></p>
 							<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
 							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
-							<p><i class="fa fa-phone"</i> +1 226 770 0265</p>
+							<p><i class="fa fa-phone"></i> +1 226 770 0265</p>
 							<img src="img/logo.png" class="footer-logo" alt="">
 						</div>
 					</div>
