Hide services for now

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li class="active"><a href="..">Home</a></li>
-				<li ><a href="services">Services</a></li>
 				<li><a href="contact">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
@@ -92,7 +91,7 @@
 			
 				<div class="container">
 					<h3><br>Antarctic Studios</h3>
-					<h2>A comprehensive Canadian audio production studio capable of all your mixing, mastering, compositional and recording needs, delivering industry-standard quality at affordable rates.</h2>
+					<h2>A comprehensive Canadian audio production studio capable of all your mixing, mastering, audio restoration and recording needs, delivering industry-standard quality at affordable rates.</h2>
 					<h4> <br>   </h4>
 					<h4>Robot Philosopher - Prosthesis - <i>Instrumental post rock</i></h4> 
 					<h5><i>Mixed and mastered</i></h5>
