--- a/services/index.html
+++ b/services/index.html
@@ -8,7 +8,7 @@
 
   gtag('config', 'G-PGPTWMVZ53');
 </script>
-	<title>Contact us - Antarctic Studios</title>
+	<title>Services - Antarctic Studios</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Antarctic Studios - Contact information page">
 	<meta name="keywords" content="radio, station, creative, html">
@@ -55,6 +55,7 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
+				<li><a href="services">Services</a></li>
 				<li class="active"><a href="contact">Contact</a></li>
 			</ul>
 			<!-- Social Links -->
