Change layout of landing page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                                  
 	<!-- Hero section -->
-	<section class="hero-section set-bg" data-setbg="img/bg.jpg">
+	<section class="hero set-bg" data-setbg="img/bg.jpg">
 		
 			
 				<div class="container">
