--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   gtag('js', new Date());
 
   gtag('config', 'G-PGPTWMVZ53');
+  
+  document.addEventListener('play', function(e){
+    var audios = document.getElementsByTagName('audio');
+    for(var i = 0, len = audios.length; i < len;i++){
+        if(audios[i] != e.target){
+            audios[i].pause();
+        }
+    }
+}, true);
 </script>
 	<title>Antarctic Studios</title>
 	<meta charset="UTF-8">
