Make theme dark

--- a/index.html
+++ b/index.html
@@ -193,12 +193,13 @@
 			
 		
 	</section>
-					<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-c944c570-0782-463b-af03-2f21bff17cac" style="background-color:#497b7b"></div>
+
 	<!-- Hero section end -->
 	
 	<!-- Footer Top section -->
 		<section class="footer-top-section">
+							<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-c944c570-0782-463b-af03-2f21bff17cac"></div>
 			<div class="container">
 				<div class="row">
 	
