--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					
 					<div class="row">
 						  <div class="column">
-						  <h2>Mixing & Mastering</h2><br>
+						  <h2><a href="https://en.wikipedia.org/wiki/Audio_mixing_(recorded_music)">Mixing</a> & <a href="https://en.wikipedia.org/wiki/Mastering_(audio)">Mastering</a></h2><br>
 						  <h4>Crimson Ash - Hope (Single Edit) - <i>Progressive Rock</i></h4> 
 						<h5><i>Mixing & Mastering</i></h5>
 						<audio controls controlsList="nodownload">
@@ -149,7 +149,7 @@
 						  
 						  </div>
 						  <div class="column">
-						  <h2>Session work and compositions</h2>
+						  <h2><a href="https://en.wikipedia.org/wiki/Session_musician">Session work</a> & <a href="https://en.wikipedia.org/wiki/Musical_composition">compositions</a></h2>
 						  <h4><br>Robot Philosopher - Cosmic Orphan - <i>Keyboards</i></h4> 
 							<h5><i>Keyboards & orchestral programming, mixed and mastered</i></h5>
 							<audio controls controlsList="nodownload">
