--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<audio controls controlsList="nodownload">
 								<source src="audio/cosmicorphan.mp3" type="audio/mp3">
 							</audio>
-						<h4><br>Sleep Token - Broken Limbs (Cover) - <i>Session piano</i></h4> 
+						<h4><br>Sleep Token - Broken Limbs (Cover) - <i>Session piano accompaniment</i></h4> 
 							<h5><i>Piano only</i></h5>
 							<audio controls controlsList="nodownload">
 								<source src="audio/Piano_SleepTokenCover.mp3" type="audio/mp3">
@@ -165,7 +165,7 @@
 							<audio controls controlsList="nodownload">
 								<source src="audio/Sax_Synthwave1.mp3" type="audio/mp3">
 							</audio>
-						<h4><br>Montirosse - West of December - <i>Session saxophone</i></h4> 
+						<h4><br>Montirosse - West of December - <i>Session saxophone (solo & accompaniment)</i></h4> 
 							<h5><i>Sax only</i></h5>
 							<audio controls controlsList="nodownload">
 								<source src="audio/Sax_HardRock.mp3" type="audio/mp3">
@@ -175,7 +175,7 @@
 							<audio controls controlsList="nodownload">
 								<source src="audio/Aggressive Synth_Synthwave.mp3" type="audio/mp3">
 							</audio>
-							<h4><br>Robot Philosopher - Astral Migration I - <i>Session piano</i></h4> 
+							<h4><br>Robot Philosopher - Astral Migration I - <i>Session piano solo</i></h4> 
 							<h5><i>Grand Piano, Mixed & Mastered</i></h5>
 							<audio controls controlsList="nodownload">
 								<source src="audio/Grand Piano Solo.mp3" type="audio/mp3">
