text too long, shortened

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<audio controls controlsList="nodownload">
 								<source src="audio/Sax_Synthwave1.mp3" type="audio/mp3">
 							</audio>
-						<h4><br>Montirosse - West of December - <i>Session saxophone (solo & accompaniment)</i></h4> 
+						<h4><br>Montirosse - West of December - <i>Session saxophone</i></h4> 
 							<h5><i>Sax only</i></h5>
 							<audio controls controlsList="nodownload">
 								<source src="audio/Sax_HardRock.mp3" type="audio/mp3">
