Add no show policy

--- a/contact/index.html
+++ b/contact/index.html
@@ -55,7 +55,7 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
-				<li class="active"><a href="contact">Contact</a></li>
+				<li class="active"><a href="contact">Contact and Booking Info</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
@@ -75,6 +75,9 @@
 			<div class="section-title text-center">
 				<h2>Contact</h2>	
 				<h3>Rates for all services are available upon request. Inquire today - we would love to help bring your project to life and help fit your artistic vision!</h3>
+				<h4>All services require a minimum 30%, non-refundable deposit paid 24 hours prior to session start time. <br>
+				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br>
+				Re-booking for a no-show requires a 50% down deposit.</h4>
 			</div>
 		</div>
 	</section>
