--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li class="active"><a href="..">Home</a></li>
-				<li><a href="contact">Contact</a></li>
+				<li><a href="contact">Contact and Booking Info</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
