--- a/contact/index.html
+++ b/contact/index.html
@@ -112,7 +112,7 @@
 						<input type="text" placeholder="Subject" name="subject">
 					</div>
 					<div class="col-lg-12">
-						<textarea placeholder="Message"></textarea>
+						<input type="text" placeholder="Message" name="msg">
 						<div class="text-center">
 							<button class="site-btn" value="Send">SEND IT!</button>
 						</div>
