--- a/testvideo/test.html
+++ b/testvideo/test.html
@@ -5,15 +5,16 @@
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
   position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Add some content at the bottom of the video/page */
 .content {
-  position: fixed;
+  position: center;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   color: #f1f1f1;
